Starting payload per function retrieve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "complex": "c",
-        "valarray": "c"
+        "valarray": "c",
+        "param.h": "c"
     }
 }
