--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "complex": "c",
         "valarray": "c",
-        "param.h": "c"
+        "param.h": "c",
+        "random": "c",
+        "ratio": "c"
     }
 }
