metadata_payloads.h defined in src/include

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "random": "c",
         "ratio": "c",
         "*.c0": "c",
-        "metadata_elf_reader.h": "c"
+        "metadata_elf_reader.h": "c",
+        "string.h": "c"
     }
 }
