metadata_payloads.h in sys

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "ratio": "c",
         "*.c0": "c",
         "metadata_elf_reader.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "metadata_payloads.h": "c"
     }
 }
