Check lock and lock if not, wrapper functs, change params orders in payload functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "metadata_elf_reader.h": "c",
         "string.h": "c",
         "metadata_payloads.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "proc.h": "c",
+        "namei.h": "c"
     }
 }
