Remove p_metadata array from proc.h, increase BINPAYLOAD_MAXSIZE to 2048 in metadata_payloads.h and other minor changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "metadata_payloads.h": "c",
         "stdio.h": "c",
         "proc.h": "c",
-        "namei.h": "c"
+        "namei.h": "c",
+        "imgact_elf.h": "c"
     }
 }
